--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test": "mocha"
   },
   "dependencies": {
-    "yeoman-generator": "~0.10.5"
+    "yeoman-generator": "~0.12.0",
+    "grunt": "~0.4.1"
   },
   "devDependencies": {
     "mocha": "~1.9.0"
