--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   },
   "dependencies": {
     "yeoman-generator": "~0.12.2",
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "npm": "~1.3.4",
+    "colors": "~0.6.0-1"
   },
   "devDependencies": {
-    "mocha": "~1.9.0"
+    "mocha": "~1.9.0",
+    "grunt-contrib-concat": "~0.3.0"
   },
   "engines": {
     "node": ">=0.8.0"
