--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "colors": "~0.6.0-1"
   },
   "devDependencies": {
-    "mocha": "~1.9.0",
-    "grunt-contrib-concat": "~0.3.0"
+    "mocha": "~1.9.0"
   },
   "engines": {
     "node": ">=0.8.0"
