--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "url": "https://github.com/addyosmani"
   },
   "main": "app/index.js",
+  "files": [
+    "app"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/yeoman/generator-gruntfile.git"
