--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "test": "mocha --reporter spec"
   },
   "dependencies": {
-    "yeoman-generator": "~0.16.0",
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "yeoman-generator": "^0.18.9"
   },
   "devDependencies": {
     "mocha": "*"
