Use lowdash's sluggify method to ensure the appname is valid. This is a fix for issue: #25
Add a test and include lowdash as a package dependency.

Use the most recent version of lowdash.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "grunt": "~0.4.1",
+    "lodash": "^3.3.1",
     "yeoman-generator": "~0.16.0"
   },
   "devDependencies": {
