--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
   },
   "dependencies": {
     "grunt": "~0.4.1",
-    "yeoman-generator": "~0.16.0",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "underscore.string": "^3.0.3",
+    "yeoman-generator": "~0.16.0"
   },
   "devDependencies": {
     "mocha": "*"
